fix lorem opener in dark mode

--- a/style.css
+++ b/style.css
@@ -311,6 +311,12 @@ body.dark {
 .dark textarea:focus {
   background-color: #444444;
 }
+.dark #lorem-opener {
+  background-color: #444444;
+}
+.dark #lorem-opener:hover {
+  background-color: #252525;
+}
 .dark #lorem-options {
   color: white;
   background-color: #252525;
@@ -327,6 +333,15 @@ body.dark {
 }
 .dark .btn-hovered::before {
   content: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_11_4)'%3E%3Cpath d='M13.1781 1.34781L6.125 8.57718L2.82125 5.44531L0.5 7.76781L6.125 13.2228L15.5 3.66968L13.1781 1.34781Z' fill='white'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_11_4'%3E%3Crect width='15' height='15' fill='white' transform='translate(0.5 0.0978088)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+}
+#lorem-switch-reversed {
+  display: none;
+}
+.dark #lorem-switch-reversed {
+  display: inline-block;
+}
+.dark #lorem-switch {
+  display: none;
 }
 #lang {
 	right: 15px;
@@ -396,7 +411,8 @@ body.dark {
     flex-flow: column nowrap;
   }
 }
-#lorem-switch {
+#lorem-switch,
+#lorem-switch-reversed {
   transition: transform 0.2s ease;
   transform-origin: center;
 }
